--- a/telecom_customer_churn/telecom_customer_churn_cleaning.ipynb
+++ b/telecom_customer_churn/telecom_customer_churn_cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJPeFy7U3JRTbg+cgP8hnJ",
+      "authorship_tag": "ABX9TyNgIiurnBhg9cWxtGMed8IF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,8 +33,10 @@
       "source": [
         "# Telco Customer Churin prediction using ANN\n",
         "### 1. Data cleaning\n",
-        "### 2. Visualization\n",
-        "### 3. Prediction using ANN\n"
+        "### 2. Prediction using ANN\n",
+        "##### **Prepared By**: Subrata Saha\n",
+        "##### **Email**: subratabaec@gmail.com\n",
+        "##### **Time**: Feb, 2023"
       ],
       "metadata": {
         "id": "8NOobKng4_xD"
@@ -51,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "c9848Lvi-2c4"
       },
@@ -74,7 +76,7 @@
         "id": "FzVenAKm_UJa",
         "outputId": "625d0612-5ee0-423f-d02b-0f46392f5557"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +107,7 @@
       "metadata": {
         "id": "rKKUnb2l_XJx"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +124,7 @@
         "id": "G_aD-8ka_Zkq",
         "outputId": "3dfecb3a-bc6a-49bf-cf94-707ba816f89b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +154,7 @@
         "id": "HHC2HqZV_nz4",
         "outputId": "c852ad35-a0cf-4c96-ffb4-61b5aaa81e33"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -480,7 +482,7 @@
         "id": "8VyUmtTTAt6O",
         "outputId": "4b597845-0c68-430b-b05b-720b05df912a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +534,7 @@
         "id": "ZsfM7dbGCz6D",
         "outputId": "f45b0010-f768-421a-e4f1-4d9d7cc2b712"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,7 +583,7 @@
         "id": "q9IJ-DRHBCli",
         "outputId": "575b2dc6-9573-4307-e0c6-5b902eaa8b54"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -634,7 +636,7 @@
       "metadata": {
         "id": "6e59irrHEtAn"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -667,7 +669,7 @@
         "id": "MKLVjqH-FM8a",
         "outputId": "b7e2a3bc-6cb5-4bac-e56c-1ad5efb5a42d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1157,7 +1159,7 @@
         "id": "2F2BPTrXGLvN",
         "outputId": "c85e9cd7-0355-4642-bf28-57ae15a3a6dd"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1200,7 +1202,7 @@
         "id": "u-JEvFs4H2cU",
         "outputId": "c239bad9-b55e-469b-e2a4-ae7d3fce2835"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1257,7 +1259,7 @@
         "id": "glSDEvpVJ6c_",
         "outputId": "4a0f484e-ffd9-466d-dbea-c3048141eca9"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,7 +1326,7 @@
         "id": "TvAEFbhdKJw6",
         "outputId": "1a42b418-49ca-4207-af7b-2075e7e8881b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1407,7 +1409,7 @@
         "id": "5J_s6_WTK_Ih",
         "outputId": "1afb44f0-233b-4afb-cd6b-9e0efaf99420"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1467,7 +1469,7 @@
         "id": "qp20CVwVQ6o4",
         "outputId": "51dd8088-7476-4e12-9617-1bb00a3a4cce"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1807,7 +1809,7 @@
         "id": "L1Ce-N4RQ92-",
         "outputId": "e72c3267-4fd0-48d2-b2c9-1bb58d4ddaec"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1870,7 +1872,7 @@
         "id": "_eA21lcGNsqY",
         "outputId": "4e1c8e29-354a-4932-f90b-a31b73b0b4b0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2321,7 +2323,7 @@
         "id": "sH4ozlegTjSl",
         "outputId": "d8ae4930-9376-46ca-eaf0-258e47f12b70"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2405,7 +2407,7 @@
         "id": "CRpn7llkmabE",
         "outputId": "a5495f73-0f7a-4cd4-ca2a-69690764eac9"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2437,7 +2439,7 @@
       "metadata": {
         "id": "_obDWJq2pB2e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2486,7 +2488,7 @@
       "metadata": {
         "id": "mQtUXWO8vPTK"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2508,7 +2510,7 @@
       "metadata": {
         "id": "wQeLOI74xa7k"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2524,7 +2526,7 @@
         "outputId": "0c8d99b0-119f-4ae1-d9a4-e06e69255619",
         "id": "nCmUntGHxa7k"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2654,7 +2656,7 @@
         "outputId": "1defba95-f244-43f5-c3dc-2ba815644962",
         "id": "_e7VPzJBxa7l"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2690,7 +2692,7 @@
         "outputId": "aef36036-96c2-411f-f8cd-0a92a0b406d3",
         "id": "FAKKBp7pxa7m"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2720,7 +2722,7 @@
         "outputId": "b0d8cdf6-4a56-43d4-ad2a-3c6bec404e07",
         "id": "WN10RY94xa7n"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2746,7 +2748,7 @@
         "outputId": "65098e85-530c-4a96-f793-4db980bc60bd",
         "id": "X0fEKI1Lxa7n"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2776,7 +2778,7 @@
         "outputId": "aae983eb-09f7-41f3-f154-5064fb785d51",
         "id": "CYdM9Rv3xa7n"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2804,7 +2806,7 @@
         "id": "hkrBsRfjyi9r",
         "outputId": "c2695454-9b1d-4b34-d213-424f236be255"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2861,7 +2863,7 @@
         "id": "HVyJ0BoNpxog",
         "outputId": "cc42381e-f649-47a4-c69c-50877bee54cc"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3091,7 +3093,7 @@
         "id": "bJT225qfs3TY",
         "outputId": "31117a86-c72b-4b4c-d4d4-20445f098b20"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3127,7 +3129,7 @@
         "id": "r_7rz4qis8Zi",
         "outputId": "efa5a5e0-6221-477c-8678-21f764477d5f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3158,7 +3160,7 @@
         "id": "QKdY4RM9tH2o",
         "outputId": "688616fb-e0f8-4135-926b-2b4fd7123532"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3184,7 +3186,7 @@
         "id": "1JMy5-QCtBDj",
         "outputId": "15344556-25cc-4daa-8479-c7e85a8247a0"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3214,7 +3216,7 @@
         "id": "x0EQtSNztKuH",
         "outputId": "5c4420a9-c752-4ded-8f6c-ff59162835f7"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3242,7 +3244,7 @@
         "id": "WMTH1pIjtEuR",
         "outputId": "078e0f51-b604-4219-96af-ef2f4bdae54d"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3260,6 +3262,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Acknowledgement:** \n",
+        "- Motivated from codebasics. \n",
+        "- https://www.youtube.com/watch?v=MSBY28IJ47U&list=LL&index=3&ab_channel=codebasics"
+      ],
+      "metadata": {
+        "id": "RkCl-08h00uV"
+      }
     }
   ]
 }
