--- a/customer_churn/customer_churn.ipynb
+++ b/customer_churn/customer_churn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNklMuD6W4ZnLMyJTGaxZ+t",
+      "authorship_tag": "ABX9TyM27E5QWiDRmKiAOFYHjfB1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Customer Churin prediction using ANN\n"
+        "# Customer Churn prediction using ANN\n",
+        "\n",
+        "### 1. Data Loading and Preparation\n",
+        "### 2. Prediction using ANN\n",
+        "##### **Prepared By**: Subrata Saha\n",
+        "##### **Email**: subratabaec@gmail.com\n",
+        "##### **Time**: Feb, 2023"
       ],
       "metadata": {
         "id": "8NOobKng4_xD"
@@ -50,7 +56,7 @@
         "id": "uA5s3wnU8vJl",
         "outputId": "c8494e35-8ac6-479b-d6aa-b78a46f8d81f"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +117,7 @@
       "metadata": {
         "id": "wZwZOeV19YFJ"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,7 +133,7 @@
         "id": "CjEHobH69dVL",
         "outputId": "2fcf37d7-f469-40e8-888f-31332eadcedc"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "gE-bT5l74wxV"
       },
@@ -169,7 +175,7 @@
         "id": "HsVjz-GF7NXk",
         "outputId": "c5d7db9b-79f3-4a58-b791-6608f2354598"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +205,7 @@
         },
         "outputId": "88c10f03-97d4-44a3-f5cc-93457da0ff3a"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -460,7 +466,7 @@
       "metadata": {
         "id": "f_X_vlNiAO3F"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -475,7 +481,7 @@
       "metadata": {
         "id": "kYZD7wap8fcs"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -486,12 +492,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 270
+          "height": 206
         },
         "id": "kHt-gDM9BMwj",
         "outputId": "132255e8-7b37-42d6-cd2a-60fed7c3c634"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,7 +720,7 @@
       "metadata": {
         "id": "M5xCqQoiAvKk"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -736,7 +742,7 @@
       "metadata": {
         "id": "M_bYGjD564Iy"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -751,12 +757,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 270
+          "height": 206
         },
         "id": "-yZoKtmxIQKG",
         "outputId": "fb908e04-491b-4e02-a547-98c477e81afe"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -983,7 +989,7 @@
       "metadata": {
         "id": "0gOxuFdWTMW4"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -996,7 +1002,7 @@
       "metadata": {
         "id": "n8O2aa1sIM7S"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1012,7 +1018,7 @@
         "id": "GyUkOA3SWBH2",
         "outputId": "984f8d46-ad99-4b76-cd7d-a9e56711a8af"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1043,7 +1049,7 @@
       "metadata": {
         "id": "42lnwR9CUj1u"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1055,7 +1061,7 @@
       "metadata": {
         "id": "i7Hq4a1JV3Xb"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1067,7 +1073,7 @@
       "metadata": {
         "id": "RYVC8tUDcxR7"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1079,7 +1085,7 @@
       "metadata": {
         "id": "_yS5YOaodEcI"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1091,7 +1097,7 @@
       "metadata": {
         "id": "Is1U5udWdMhk"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1103,7 +1109,7 @@
       "metadata": {
         "id": "8yWOSCfLdSM3"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1116,7 +1122,7 @@
       "metadata": {
         "id": "MqQiCKMOiVoa"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1124,12 +1130,12 @@
       "source": [
         "# classifier.compile(optimizer='adam',loss='binary_crossentropy',metrics=['accuracy']) #The default learning rate is 0.001\n",
         "\n",
-        "classifier.compile(optimizer=opt,loss='binary_crossentropy',metrics=['accuracy']) #The default learning rate is 0.001\n"
+        "classifier.compile(optimizer=opt,loss='binary_crossentropy',metrics=['accuracy']) \n"
       ],
       "metadata": {
         "id": "XbuwUUFrdxV_"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1151,7 +1157,7 @@
       "metadata": {
         "id": "XNH9KYGkkHK-"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1167,7 +1173,7 @@
         "id": "0YJ_qdaGifx9",
         "outputId": "888916fe-1100-4fae-b223-db37a62979df"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1249,7 +1255,7 @@
         "id": "uM14VXZDnVWT",
         "outputId": "1a623172-357e-41b4-aa0a-7c6264af7111"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1283,7 +1289,7 @@
         "id": "PzxCFL1jnd_a",
         "outputId": "5d55c975-692e-4a11-d834-53a7dfdd86bd"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1319,7 +1325,7 @@
         "id": "eQQ6YsytpgM8",
         "outputId": "bf95a032-b68a-42dd-f9a3-6842470f7d4a"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1359,7 +1365,7 @@
         "id": "klcMQbY-p3Yr",
         "outputId": "fa0218ad-4210-438b-d9a8-3260741184c0"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1385,7 +1391,7 @@
         "id": "NqvKJBtiqIuu",
         "outputId": "12352c25-407d-4c08-cdc6-039ff7281392"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1415,7 +1421,7 @@
         "id": "pC82Q0GqqTJ0",
         "outputId": "1ce3a320-868e-4515-b0ae-40b91c64a41c"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1432,7 +1438,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### source link: https://www.youtube.com/watch?v=ydzFSLDmHmE&list=PLZoTAELRMXVPiyueAqA_eQnsycC_DSBns&index=5&ab_channel=KrishNaik"
+        "**Acknowledgement:** \n",
+        "- Motivated from Krish Naik. \n",
+        "- https://www.youtube.com/watch?v=ydzFSLDmHmE&list=PLZoTAELRMXVPiyueAqA_eQnsycC_DSBns&index=5&ab_channel=KrishNaik"
       ],
       "metadata": {
         "id": "JYMCUUYCsYVG"
