--- a/Bank_customer_churn/Bank_customer_churn_cleaning.ipynb
+++ b/Bank_customer_churn/Bank_customer_churn_cleaning.ipynb
@@ -4,8 +4,25 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "fzxXd4E5UlyI",
+        "4HNBEtnwVTKy",
+        "y4mWblQXVko8",
+        "la5ooN71WdOx",
+        "fjJoq0PzWtFE",
+        "n-1EcBvlW1r6",
+        "u17Q89H1X3VK",
+        "S1-hGFHTZx_t",
+        "33u_7crrmRfi",
+        "7_7C8YUnYHSp",
+        "G3yndt7uhO13",
+        "S_ZpwZeiUT_W",
+        "ZjRSUzfFpNNI",
+        "RXR5-0N0qjo4",
+        "TeJp3OWixm1h"
+      ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMZb7qCHiSlB/uW0sznZji8",
+      "authorship_tag": "ABX9TyNRnNrlLdOkROtmvyCdXuRn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -602,7 +619,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### iii. Check For Dupicate Records"
+        "### iii. Check For Duplicate Records"
       ],
       "metadata": {
         "id": "GzSgFh1EWRtS"
